--- a/css/creative.css
+++ b/css/creative.css
@@ -59,6 +59,13 @@ blockquote {
   font-style: italic;
   color: #777777; }
 
+.icons_color {
+  color: #ff00f4;
+}
+.icons_color:hover {
+  color: #5457FF;
+}
+
 .section-heading {
   font-size: 36px;
   font-weight: 700;
