Added Portrait photo to About Me

--- a/css/creative.css
+++ b/css/creative.css
@@ -59,6 +59,10 @@ blockquote {
   font-style: italic;
   color: #777777; }
 
+#portrait_img {
+  margin: 0 auto;
+}
+
 .about_me_23 {
   font-size: 23px;
 }
