--- a/css/creative.css
+++ b/css/creative.css
@@ -115,6 +115,7 @@ blockquote {
   font-family: 'Orbitron', sans-serif;
   color: rgba(255, 255, 255, 0.85);
   padding-top: 120px;
+  padding-bottom: 120px;
 }
 .bg-tertiary {
   background:  url('../img/grid.gif') no-repeat center center fixed; 
