--- a/css/creative.css
+++ b/css/creative.css
@@ -121,8 +121,26 @@ blockquote {
   background:  url('../img/grid.gif') no-repeat center center fixed; 
   background-size: cover;
   font-family: 'Orbitron', sans-serif;
-  padding-top: 200px;
-  padding-bottom: 200px;
+  /*padding-top: 200px;
+  padding-bottom: 200px;*/
+  position: relative;
+  width: 100%;
+  min-height: auto;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
+  background-position: center;
+}
+#contact {
+  min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
+  min-height: 100vh; /* These two lines are counted as one :-)       */
+
+  display: flex;
+  align-items: center;
+}
+.icon-box {
+  flex: 1;
 }
 .bg-dark {
   background-color: #111111;
@@ -325,6 +343,9 @@ header .header-content .header-content-inner p {
     max-width: 80%;
     margin-left: auto;
     margin-right: auto;
+  }
+  .bg-tertiary {
+    min-height: 100%;
   }
 }
 .section-heading {
