--- a/css/creative.css
+++ b/css/creative.css
@@ -148,6 +148,24 @@ blockquote {
   display: flex;
   align-items: center;
 }
+#contact_row {
+  margin-left: 200px;
+  margin-right: 200px;
+}
+
+@media (min-width: 769px) and (max-width:1200px){
+  #contact_row {
+    margin-left: 100px;
+    margin-right: 100px;
+  }
+}
+
+@media (max-width: 768px) {
+  #contact_row {
+    margin-left: -15px;
+    margin-right: -15px;
+  }
+}
 .icon-box {
   flex: 1;
 }
